@@ -111,6 +111,12 @@ $body .= elgg_echo("group_tools:settings:mail");
 $body .= elgg_view("input/dropdown", array("name" => "params[mail]", "options_values" => $noyes_options, "value" => $plugin->mail, "class" => "mls"));
 $body .= "</div>";
 
+$body .= "<div>";
+$body .= elgg_echo("group_tools:settings:member_export");
+$body .= elgg_view("input/dropdown", array("name" => "params[member_export]", "options_values" => $noyes_options, "value" => $plugin->member_export, "class" => "mls"));
+$body .= "<div class='elgg-subtext'>" . elgg_echo("group_tools:settings:member_export:description") . "</div>";
+$body .= "</div>";
+
 $body .= "<br />";
 
 $body .= "<div>";
